[前端][ UI ]完成"在每次新增或刪除待辦清單後顯示狀態訊息過5秒即自動消失的功能"、新增 sweetalert 套件 [後端]解決錯誤密碼仍可登入帳戶的問題、message 皆中翻英

--- a/views/pages/todolist.ejs
+++ b/views/pages/todolist.ejs
@@ -10,12 +10,9 @@
                 <img id="addBtn" src="../../img/icon/todoList/add.png" alt="add a to-do item"> 
             </div>
             
-            <div class="todoBox">
-                <!-- <h1 class="warning"></h1> -->
-            </div> 
+            <div class="todoBox"></div> 
         </form>
-        <h1 class="warning"></h1>
-        
+        <h2 class="warning"></h2>
 
         <!-- <br/>
         <br/> -->
@@ -26,6 +23,4 @@
     </section>   
 </article>  
 
-<script src="../js/member.js"></script> 
-<script src="../js/todolist.js"></script> 
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> 
+<script src="../js/todolist.js"></script>
