--- a/public/styles/pages/_todolist.scss
+++ b/public/styles/pages/_todolist.scss
@@ -66,12 +66,8 @@ body{
                         margin: 20px 0;
                         border-radius: 5px;
                         overflow: hidden;
-                        
                         outline: 3px solid #448899;
-                        
-                        // .warning{
-                        //     color: blueviolet;
-                        // }
+
                         div.todo{
                             display: flex;
                             justify-content: center;
@@ -81,8 +77,8 @@ body{
                             // 綠色按鈕 completeBtn 'done'模式 漸進效果
                             transition: all 0.1s ease;
                 
-                            outline: 1px solid #cfe4e5;
-                            outline: 1px solid pink; //[暫時]
+                            // outline: 1px solid #cfe4e5; //[日後可作為切換樣式]
+                            outline: 1px solid pink; 
                             .todo-time{
                                 width: 15%;
                                 color: #004B97; 
@@ -122,21 +118,20 @@ body{
                                 // outline: 1px solid red;
                             } 
                         }
+
                         .done{
-                            display: none; //[暫時不用此按鈕，之會優化網站再恢復此功能!]
+                            display: none; // [暫時不用此按鈕，之會優化網站再恢復此功能!]
                             opacity: 0.5;
                             text-decoration: line-through;
                             text-decoration-thickness: 0.2rem;
                         }
                     }
                 }   
-                // .title, .warning{
-                //     width: 53vw; //[new]
-                //     text-align: center;     
-                // }
+
                 .warning{
                     color: #ff0000;
                 }
+                
                 .sort button{
                     padding: 0.25rem 0.5rem;
                     margin: 0.1rem;
