[前端][ UI ]完成 "白天、黑夜背景等物件" 的 RWD

--- a/public/styles/base/_normalize.scss
+++ b/public/styles/base/_normalize.scss
@@ -361,6 +361,11 @@ template {
 html{
   font-size: 1rem;
   font-family: 'Noto Sans TC', sans-serif;
+  height: 100%;
+}
+
+body{
+  height: 100%;
 }
 
 h2, h4, p, input, label{   
