--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1363,7 +1363,7 @@ body main .dayBox .daytime #dog::after {
   -webkit-animation: shadow 0.4s infinite 0.4s cubic-bezier(0.4, 0.34, 0.16, 0.79);
           animation: shadow 0.4s infinite 0.4s cubic-bezier(0.4, 0.34, 0.16, 0.79);
   background: rgba(0, 0, 0, 0.24);
-  z-index: -1;
+  z-index: -2;
   transform: rotate(-5deg);
   top: 102px;
   left: -10px;
@@ -2796,6 +2796,31 @@ body main .calendar #calendar tbody .day td a .checkNight img {
     top: 73%;
     left: 5%;
   }
+  body main .dayBox .daytime #boat {
+    bottom: 380px;
+  }
+  @-webkit-keyframes boatMove {
+    0% {
+      transform: translateX(1300px);
+    }
+    50% {
+      bottom: 375px;
+    }
+    100% {
+      bottom: 380px;
+    }
+  }
+  @keyframes boatMove {
+    0% {
+      transform: translateX(1300px);
+    }
+    50% {
+      bottom: 375px;
+    }
+    100% {
+      bottom: 380px;
+    }
+  }
   body main .nightBox .night #forest {
     bottom: -27%;
   }
@@ -2815,17 +2840,17 @@ body main .calendar #calendar tbody .day td a .checkNight img {
     left: 5%;
   }
   body main .dayBox .daytime #boat {
-    bottom: 300px;
+    bottom: 315px;
   }
   @-webkit-keyframes boatMove {
     0% {
       transform: translateX(1100px);
     }
     50% {
-      bottom: 305px;
+      bottom: 310px;
     }
     100% {
-      bottom: 300px;
+      bottom: 315px;
     }
   }
   @keyframes boatMove {
@@ -2833,10 +2858,10 @@ body main .calendar #calendar tbody .day td a .checkNight img {
       transform: translateX(1100px);
     }
     50% {
-      bottom: 305px;
+      bottom: 310px;
     }
     100% {
-      bottom: 300px;
+      bottom: 315px;
     }
   }
   body main .nightBox .night #forest {
@@ -3317,17 +3342,17 @@ body main .calendar #calendar tbody .day td a .checkNight img {
     right: -9vw;
   }
   body main .dayBox .daytime #boat {
-    bottom: 340px;
+    bottom: 350px;
   }
   @-webkit-keyframes boatMove {
     0% {
       transform: translateX(1200px);
     }
     50% {
-      bottom: 335px;
+      bottom: 355px;
     }
     100% {
-      bottom: 340px;
+      bottom: 350px;
     }
   }
   @keyframes boatMove {
@@ -3335,10 +3360,10 @@ body main .calendar #calendar tbody .day td a .checkNight img {
       transform: translateX(1200px);
     }
     50% {
-      bottom: 335px;
+      bottom: 355px;
     }
     100% {
-      bottom: 340px;
+      bottom: 350px;
     }
   }
   body main .nightBox .night #moon {
@@ -3419,6 +3444,31 @@ body main .calendar #calendar tbody .day td a .checkNight img {
   }
   body main .dayBox .daytime #ball {
     top: 79%;
+  }
+  body main .dayBox .daytime #boat {
+    bottom: 320px;
+  }
+  @-webkit-keyframes boatMove {
+    0% {
+      transform: translateX(400px);
+    }
+    50% {
+      bottom: 315px;
+    }
+    100% {
+      bottom: 320px;
+    }
+  }
+  @keyframes boatMove {
+    0% {
+      transform: translateX(400px);
+    }
+    50% {
+      bottom: 315px;
+    }
+    100% {
+      bottom: 320px;
+    }
   }
   body main .nightBox .night #forest {
     left: 1%;
