--- a/public/styles/pages/_index.scss
+++ b/public/styles/pages/_index.scss
@@ -19,9 +19,9 @@ body{
         position: relative;
         // position: fixed; //可以解決但是月曆上下位置跑掉--------------------------------
         width: 100%;
-        // height: 45.5vw;   // [step 1]解決右側出現捲軸問題
+        // height: 45.5vw; // [step 1]解決右側出現捲軸問題
         height: 100%; 
-        overflow: hidden; // [step 1]解決右側出現捲軸問題        
+        overflow: hidden;  // [step 1]解決右側出現捲軸問題        
         // outline: 3px solid green;
         .background-box{
             position: absolute;
@@ -1525,6 +1525,9 @@ body{
                     }
                 }
             }
+            .calendar {
+                transform: scale(1, 1);
+            }
         }
     } 
 }
@@ -1573,7 +1576,7 @@ body{
             }
             .calendar {
                 margin-top: 3%;
-                transform: scale(0.8, 0.8);
+                transform: scale(0.75, 0.75);
             }
         }
     } 
@@ -1640,7 +1643,7 @@ body{
                     } 
                     #dog {
                         left: 25%;
-                        top: 75%;
+                        top: 68%;
                         transform: scale(1.5, 1.5);
                         .tail {
                             .helix{          
@@ -1649,7 +1652,7 @@ body{
                         }  
                     }
                     #ball {
-                        top: 86%;
+                        top: 79%;
                         left: 13%;
                     }
                     #bucket {
@@ -1714,12 +1717,17 @@ body{
                         top: 2%;
                     }
                     #dog {
-                        top: 70%;
+                        top: 67%;
                         left: 16.5%;
                         transform: scale(1.3, 1.3);
+                        .tail {
+                            .helix{          
+                                background-color: #83cbde;
+                            }
+                        }   
                     }
                     #ball {
-                        top: 82%;
+                        top: 80%;
                         left: 9%;
                     }
                     #bucket {
@@ -1905,9 +1913,16 @@ body{
                         top: -0.5%;
                         right: 1%;
                     }
+                    #dog{
+                        .tail {
+                            .helix{          
+                                background-color: #97d5e7;
+                            }
+                        }   
+                    }
                     #ball{
+                        top: 82%;
                         left: 17%;
-                        top: 85%;
                     }
                     #sandcastle, #bucket{
                         transform: scale(0.8, 0.8);
@@ -1964,6 +1979,7 @@ body{
             }
             .calendar {
                 transform: scale(0.6, 0.6);
+                margin-top: -40%;
             }
         }
     } 
@@ -1984,7 +2000,7 @@ body{
                         top: 68%;
                         .tail {
                             .helix{          
-                                background-color: #75d8fd;
+                                background-color: #91dffb;
                             }
                         }   
                     }
@@ -2042,8 +2058,8 @@ body{
                 } 
             }
             .calendar {
-                transform: scale(0.5, 0.5);
-                top: -5%; // 白天適用
+                transform: scale(0.55, 0.55);
+                margin-top: 5%; // 白天適用
             }
         }
     } 
@@ -2061,10 +2077,15 @@ body{
                         right: 7%;
                     }
                     #dog{
-                        top: 65%; 
+                        top: 68%; 
+                        .tail {
+                            .helix{          
+                                background-color: #91dffb;
+                            }
+                        }  
                     }
                     #ball{
-                        top: 77%;
+                        top: 81%;
                         left: 14%;
                     }
                     #sandcastle{
@@ -2119,7 +2140,7 @@ body{
             }
             .calendar {
                 transform: scale(0.5, 0.5);
-                top: -3%; // 白天適用
+                margin-top: 5%; // 白天適用
             }
         }
     } 
@@ -2136,9 +2157,23 @@ body{
                         right: 2vw; 
                     }
                     #ball{
-                        top: 78%;
+                        top: 81%;
                         left: 14%;
                     }
+                    #boat { 
+                        bottom: 320px;
+                    }
+                    @keyframes boatMove {
+                        0% {
+                            transform: translateX(1200px);
+                        }
+                        50%{
+                            bottom: 325px;
+                        }
+                        100%{
+                            bottom: 320px;
+                        }
+                    } 
                 }   
             }
             .nightBox{
@@ -2186,22 +2221,22 @@ body{
                         right: 4vw; 
                     }
                     #ball{
-                        top: 79%;
+                        top: 81%;
                     }
                     #boat {
                         bottom: 320px;
-                        @keyframes boatMove {
-                            0% {
-                                transform: translateX(400px);
-                            }
-                            50%{
-                                bottom: 315px;
-                            }
-                            100%{
-                                bottom: 320px;
-                            }
-                        }
                     }  
+                    @keyframes boatMove {
+                        0% {
+                            transform: translateX(400px);
+                        }
+                        50%{
+                            bottom: 315px;
+                        }
+                        100%{
+                            bottom: 320px;
+                        }
+                    }
                 }   
             }
             .nightBox{
@@ -2284,6 +2319,9 @@ body{
                     }
                 } 
             }
+            .calendar {
+                margin-top: -5%; // 白天適用
+            }
         }
     } 
 }
@@ -2351,7 +2389,7 @@ body{
                         right: -38vw; 
                     }
                     #ball{
-                        top: 78%;
+                        top: 84%;
                         left: 20%;
                     }
                     #bucket{
@@ -2359,7 +2397,7 @@ body{
                         right: 20vw;
                     }
                     #dog{
-                        top: 62%;
+                        top: 68%;
                         transform: scale(0.65, 0.65);
                         .tail {
                             .helix{          
@@ -2367,6 +2405,20 @@ body{
                             }
                         }   
                     }
+                    #boat { 
+                        bottom: 220px;
+                    }
+                    @keyframes boatMove {
+                        0% {
+                            transform: translateX(1200px);
+                        }
+                        50%{
+                            bottom: 225px;
+                        }
+                        100%{
+                            bottom: 220px;
+                        }
+                    } 
                 }   
             }
             .nightBox{
@@ -2394,7 +2446,7 @@ body{
             }
             .calendar {
                 transform: scale(0.38, 0.38);
-                top: 3%; // 白天適用
+                margin-top: -10%; // 白天適用
             }
         }
     } 
