--- a/public/styles/pages/_todolist.scss
+++ b/public/styles/pages/_todolist.scss
@@ -31,7 +31,6 @@ body{
                     .inputBox{
                         width: 100%;
                         height: 20%;
-
                         text-align: center;
                         // outline: 5px solid black;   
                         input, button{
@@ -43,12 +42,12 @@ body{
                         input[type="time"]{
                             width:  155px;
                             height: 40.19px;
+                            // outline: 1px solid red;
                         }
                         input[type="text"]{
-                            width:  420px; //[old]
-                            // width:  450px;
+                            width:  420px; 
                             height: 40.19px;
-                            
+                            // outline: 1px solid rgb(12, 239, 251);
                         }
                         #addBtn{
                             width: 50px;
@@ -111,7 +110,7 @@ body{
                             } 
                             button.complete{
                                 display: none; //[暫時不用此按鈕，之會優化網站再恢復此功能!]
-                                background-color: rgb(50, 255, 50);
+                                // background-color: rgb(50, 255, 50);
                             } 
                             button.remove{
                                 background-color: #fff;
@@ -155,3 +154,423 @@ body{
     }
 }
 
+@media screen and (max-width: 1024px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        width: 95%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 912px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        margin-top: -25px;
+                        .inputBox{
+                            input[type="text"]{
+                                width:  360px;    
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                button{
+                                    width: 4.5vw;
+                                    height: 4.5vw;
+                                    img{
+                                        width: 2.5vw;
+                                        height: 2.5vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 820px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        .inputBox{
+                            input[type="text"]{
+                                width:  280px;    
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 768px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        margin-top: -13px;
+                        .inputBox{
+                            display: flex;
+                            input[type="text"]{
+                                width:  280px;  
+                            }
+                            #addBtn{
+                                top: -2.5px;
+                                left: -15px;
+                                z-index: 2;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                .todo-time{
+                                    margin-right: 5px;
+                                }
+                            }
+                        } 
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 680px){
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        .inputBox{
+                            input[type="text"]{
+                                width:  200px;  
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                .todo-time{
+                                    padding: 10px 2px;
+                                    width: 18%;
+                                }
+                                .todo-text{
+                                    padding: 5px 1px;
+                                    width: 80%;
+                                }
+                                button{
+                                    width: 6.5vw;
+                                    height: 6.5vw;
+                                    img{
+                                        width: 3.5vw;
+                                        height: 3.5vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 540px){
+    body{
+        main{
+            .todayPlan{
+                .planBox{
+                    form{
+                        .inputBox{
+                            text-align: start;
+                            display: flex;
+                            flex-wrap: wrap;
+                            justify-content: center;
+                            input[type="time"], input[type="text"]{
+                                width:  100%;  
+                            }
+                            input[type="text"]{
+                                border-radius: 5px 20px 20px 5px;
+                            }
+                            #addBtn{
+                                top: -48px;
+                                left: 118px;
+                            }
+                        }
+                        .todoBox{
+                            width: 51vw;
+                            margin-top: -10%;
+                            div.todo{
+                                .todo-time{
+                                    font-size: 20px;
+                                    padding: 12px 3px;
+                                    margin-right: 5px;
+                                }
+                                .todo-text{
+                                    font-size: 22px;
+                                }
+                                button{
+                                    padding: 2px 2px;
+                                    width: 4.2vw;
+                                    height: 4.2vw;
+                                    img{
+                                        width: 3.5vw;
+                                        height: 3.5vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (device-width: 414px){ 
+    body{
+        main{
+            height: auto;
+            .todayPlan{
+                width: 100%;
+                .planBox{    
+                    form{
+                        height: 100%;
+                        .inputBox{
+                            input[type="time"], input[type="text"]{
+                                width: 95%;  
+                            }
+                            #addBtn{
+                                left: 168px;
+                            }
+                        }
+                        .todoBox{
+                            width: 82vw;
+                            div.todo{
+                                button{
+                                    width: 7vw;
+                                    height: 7vw;
+                                    img{
+                                        width: 5vw;
+                                        height: 5vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 412px){ 
+    body{
+        main{
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            .todayPlan{
+                width: 100%;
+                .planBox{    
+                    form{
+                        height: 100%;
+                        .inputBox{
+                            input[type="time"], input[type="text"]{
+                                width: 95%;  
+                            }
+                            #addBtn{
+                                left: 168px;
+                            }
+                        }
+                        .todoBox{
+                            width: 82vw;
+                            div.todo{
+                                button{
+                                    width: 7vw;
+                                    height: 7vw;
+                                    img{
+                                        width: 5vw;
+                                        height: 5vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (device-width: 393px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{    
+                    form{
+                        .inputBox{
+                            #addBtn{
+                                left: 158px;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                button{
+                                    width: 8vw;
+                                    height: 8vw;
+                                    img{
+                                        width: 6vw;
+                                        height: 6vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (device-width: 390px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{    
+                    form{
+                        .inputBox{
+                            input[type="time"], input[type="text"]{
+                                width: 100%;  
+                            }
+                            #addBtn{
+                                left: 162px;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                button{
+                                    width: 8vw;
+                                    height: 8vw;
+                                    img{
+                                        width: 6vw;
+                                        height: 6vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (device-width: 375px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{  
+                    form{    
+                        .inputBox{
+                            #addBtn{
+                                left: 154px;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                button{
+                                    width: 8vw;
+                                    height: 8vw;
+                                    img{
+                                        width: 6vw;
+                                        height: 6vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 360px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{    
+                    form{
+                        .inputBox{
+                            input[type="time"], input[type="text"]{
+                                width: 98%;  
+                            }
+                            #addBtn{
+                                left: 148px;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{
+                                button{
+                                    width: 8vw;
+                                    height: 8vw;
+                                    img{
+                                        width: 6vw;
+                                        height: 6vw;
+                                    }
+                                } 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 280px){ 
+    body{
+        main{
+            .todayPlan{
+                .planBox{    
+                    form{
+                        .inputBox{
+                            input[type="time"], input[type="text"]{
+                                width: 100%;  
+                            }
+                            #addBtn{
+                                width: 47px;
+                                height: 47px;
+                                left: 112px;
+                            }
+                        }
+                        .todoBox{
+                            div.todo{                                
+                                .todo-time{
+                                    width: 22%;
+                                    font-size: 16px;
+                                    padding: 11px 1px;
+                                    margin-right: 0px;
+                                }
+                                .todo-text{
+                                    padding: 1.5px;
+                                    font-size: 18px;
+                                }
+                                button{
+                                    padding: 1.5px;
+                                    width: 9vw;
+                                    height: 9vw;
+                                    img{
+                                        width: 7vw;
+                                        height: 7vw;
+                                    }
+                                }  
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
